# smi-profile-collection

./: .gitignore  nxtest.py  pixi.toml  pyproject.toml  smi_config.csv
.ci/: bl-specific.sh
.github/: ci.yml
.github/workflows/: ci.yml
acceptance_tests/: run_all_tests.py
docs/: DCM_FEEDBACK_AND_ENERGY_MOVES.md  GUI_REDIS_FLAGS.md  SAXS_BEAMSTOP_WOBBLE.md  TESTING.md
nexus/: device.py  test_file.nxs
nexus/runs/: test_run.json
nexus/schemas/: monochromator.yaml  monochromator_with_grating.yaml
scripts/: build_distance_calibration.py  kafka_linker-tester.py
smibase/: attenuators.py  base.py  beamstop.py  bladecoater.py  electrometers.py  ioLogik.py  motors.py  shutter.py  xbpms.py
smiclasses/: bimorph.py  crls.py  ioLogik.py  shutter.py  xbpms.py
smiusers/: 30-user-Gergaud.py  30-user-Gu.py  30-user-Guillaume.py  30-user-McNeil.py  30-user-NIST_sept18.py  30-user-Patryk.py  30-user_Reven.py  example_scripts.py
src/smi_beamline/: __init__.py  instances.py
src/smi_beamline/devices/: __init__.py  _config.py  _context.py  _plan_helpers.py  amptek.py  attenuator_data.py  attenuators.py  bimorph.py  energy.py  ioLogik.py  machine.py  pilatus.py  shutter.py  waxschamber.py
src/smi_beamline/plans/: __init__.py  alignment.py  config.py  dcm_diag.py  energy_move_preprocessor.py  energy_walk.py  humidity_cell.py  re_status.py  scan_naming.py  utils.py
startup/: 00-base.py  09-machine.py  10-attenuators.py  11-energy.py  16-electrometers.py  20-amptek.py  21-pilatus.py  22-prosilica.py  36-Guillaume-beam.py  37-Alignement.py  80-config.py  90-blade_coater.py  98-suspenders.py  99-exporting.py  99-utils.py  README  startup.py  user_group_permissions.yaml
startup/agb_z_calibration_results/: bc_col.npy  bc_col_pin.npy  bc_row.npy  bc_row_pin.npy  frame.npy  motor_x.npy  motor_y.npy  motor_z.npy  piezo_z.npy  pin_shadow_col.npy  pin_shadow_n.npy  pin_shadow_row.npy  ring_fwhm_px.npy  ring_radius_mm.npy  ring_radius_px.npy  sdd_mm.npy
startup/smibase/: alignment.py  amptek.py  attenuators.py  base.py  base_dev.py  beam.py  beamstop.py  bladecoater.py  config.py  crls.py  electrometers.py  energy.py  humidity_cell.py  ioLogik.py  linkam.py  machine.py  manipulators.py  mirrors.py  motors.py  pilatus.py  prosilica.py  shutter.py  slits.py  suspenders.py  utils.py  waxschamber.py  xbpms.py  zz_smi_plans.py
startup/smiclasses/: __init__.py  _config.py  _context.py  _plan_helpers.py  amptek.py  attenuators.py  beam.py  beamstop.py  bimorph.py  bladecoater.py  crls.py  device_factory.py  electrometers.py  energy.py  ioLogik.py  linkam.py  machine.py  manipulators.py  mirrors.py  motors.py  pilatus.py  prosilica.py  shutter.py  slits.py  waxschamber.py
startup/users/: 30-user-CDSAXS.py  30-user-ETsai.py  30-user-Gann.py  30-user-Reven.py  30-user-Richter.py  30-user-Su.py  30-user-Yager.py
tests/: conftest.py  test_smiclasses_import.py  test_startup.py
tests/hardware/: test_hardware_connect.py
tests/integration/: test_energy_iocs.py
tests/iocs/: sim_energy_ioc.py
tests/sim/: _fakes.py  conftest.py  test_attenuator_retry.py  test_attenuator_set.py  test_dcm_diag_tables.py  test_device_instantiation.py  test_energy_feedback.py  test_energy_move_preprocessor.py  test_energy_walk.py  test_ivu_brake_retry.py  test_plan_against_fakes.py  test_re_status.py  test_scan_naming_preprocessor.py
tests/unit/: test_attenuator_factor.py  test_config_helpers.py  test_context.py  test_device_factory.py  test_devices_import.py  test_factory.py  test_scan_naming.py  test_smiclasses_import.py
