# Phase 4 (factory + package): the device classes now live in src/smi_beamline/ (moved from
# startup/smiclasses, which remains a thin re-export shim during the transition). The profile is
# still loaded by IPython/QS via startup/startup.py, which puts src/ on sys.path; this packaging
# also allows a future `pip install -e .` into the pixi env.
#
# See smi-plans/docs/STARTUP_RESTRUCTURE_PLAN.md (Phase 4).

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smi-beamline"
version = "2026.2.0"
description = "NSLS-II SMI beamline Bluesky package (device classes, factory, plans) + profile startup."
requires-python = ">=3.12"
# Runtime deps (bluesky/ophyd/nslsii/...) are provided by the pixi environment, not pip.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7", "ophyd", "numpy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Test tiers (see docs/TESTING.md and tests/conftest.py):
#   unit     -- pure code, no devices
#   sim      -- fake, non-broadcasting ophyd.sim devices (no hardware)
#   hardware -- real EPICS PVs; DESELECTED unless `pytest --run-hardware`
markers = [
    "unit: pure-code test; constructs no devices",
    "sim: builds fake (non-broadcasting) devices; no hardware",
    "hardware: connects to REAL hardware; opt-in via --run-hardware",
]
# The device-class tests must run with no hardware; they rely on ophyd.sim.make_fake_device.
